[package]
name = "cargo-martian"
version = "0.1.0"
authors = ["Sreenath Krishnan <sreenathk.89@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
docopt = "1.0"
serde = { version = "1.0", features = ['derive'] }
serde_json = "1.0"
strfmt = "0.1.6"
heck = "0.3.3"
