[package]
name = "martian-derive"
version = "0.24.0"
authors = ["Sreenath Krishnan <sreenath.krishnan@10xgenomics.com>"]
edition = "2018"
include = ["src/lib.rs", "README.md"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {version = "1.0", features = ['full', 'derive', 'parsing', 'printing', 'extra-traits']}
quote = "1.0"
proc-macro2 = "1.0"
martian = { path = "../martian" }
serde = { version = '1.0', features = ['derive'] }

[lib]
proc-macro = true

[dev-dependencies]
trybuild = "1.0"
pretty_assertions = "0.7.2"
