[package]
name = "martian-derive"
version = "0.26.0"
authors = ["Sreenath Krishnan <sreenath.krishnan@10xgenomics.com>"]
edition = "2021"
include = ["src/lib.rs", "README.md"]
license = "MIT"

[lib]
proc-macro = true

[dependencies]
martian = { path = "../martian" }
proc-macro2 = "1"
quote = "1"
serde = { version = "1", features = ["derive"] }
syn = { version = "2", features = [
    "derive",
    "extra-traits",
    "full",
    "parsing",
    "printing",
] }

[dev-dependencies]
pretty_assertions = "1"
trybuild = "1"
