[package]
name = "martian-filetypes"
version = "0.25.0"
authors = ["Sreenath Krishnan <sreenathk.89@gmail.com>"]
edition = "2021"
include = ["src/**/*"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
martian = { version = ">=0.25.1", path = "../martian" }
martian-derive = { path = "../martian-derive" }
serde = { version = '1.0', features = ['derive'] }
serde_json = "*"
bincode = "1.3"
anyhow = { version = "1", features = ["backtrace"] }
lz4 = "1.23"
csv = "1.1.1"
flate2 = "1"

[dev-dependencies]
tempfile = "3"
criterion = "0.4"
trybuild = "1.0"

[[bench]]
name = "benchmarks"
harness = false

[dev-dependencies.proptest]
version = "1.0"
default-features = false
# Enable all default features not known to break code coverage builds
features = ["default-code-coverage"]
