[package]
name = "martian-filetypes"
version = "0.27.0"
authors = ["Sreenath Krishnan <sreenathk.89@gmail.com>"]
edition = "2021"
include = ["src/**/*"]
license = "MIT"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
bincode = "1"
csv = "1"
flate2 = "1"
lz4 = "1"
martian = { version = ">=0.25.1", path = "../martian" }
martian-derive = { path = "../martian-derive" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zstd = ">=0.11, <1"

[dev-dependencies]
criterion = "0.5"
tempfile = "3"
trybuild = "1"

[dev-dependencies.proptest]
version = "1"
default-features = false
# Enable all default features not known to break code coverage builds
features = ["default-code-coverage"]

[[bench]]
name = "benchmarks"
harness = false
