[package]
name = "martian-lab"
version = "0.1.0"
authors = ["Sreenath Krishnan <sreenathk.89@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
serde = { version = "1.0", features = ['derive'] }
martian = { path = "../martian" }
martian-derive = { path = "../martian-derive" }
docopt = "1.0"
failure = "*"

[[example]]
name = "sum_sq"
path = "examples/sum_sq/src/main.rs"
test = true

[[example]]
name = "sum_sq_main"
path = "examples/sum_sq_main/src/main.rs"
test = true
