[package]
name = "martian"
version = "0.24.0"
authors = ["Patrick Marks <patrick@10xgenomics.com>", "Sreenath Krishnan <sreenath.krishnan@10xgenomics.com>"]
edition = "2018"
include = ["src/*.rs", "README.md"]
license = "MIT"

[dependencies]
libc = "*"
log = "0.4"
fern = ">=0.5, <=0.6"
chrono = { version = "*", default-features = false, features = ["std", "clock"] }
serde = { version = "1.0", features = ['derive'] }
serde_json = "1.0"
backtrace = "*"
failure = "*"
failure_derive = "*"
heck = "*"
tempfile = "3"
rustc_version = "0.3"
rayon = { version = ">=1.0", optional = true }

[dev-dependencies]
indoc = "1.0.3"
pretty_assertions = "0.7.2"
insta = "1.7"

[features]
default = []
