[package]
name = "martian"
version = "0.26.0"
authors = ["Patrick Marks <patrick@10xgenomics.com>", "Sreenath Krishnan <sreenath.krishnan@10xgenomics.com>"]
edition = "2021"
include = ["src/*.rs", "README.md"]
license = "MIT"

[dependencies]
libc = "*"
log = "0.4"
fern = ">=0.5, <0.7"
time = { version = ">=0.3", features = ["formatting", "local-offset"] }
serde = { version = "1.0", features = ['derive'] }
serde_json = "1.0"
backtrace = "*"
anyhow = { version = "1", features = ["backtrace"] }
heck = "0.4"
tempfile = "3"
rustc_version = ">=0.3, <0.5"
rayon = { version = ">=1.0", optional = true }

[dev-dependencies]
indoc = "1.0.4"
pretty_assertions = "1.2.1"
insta = "1.20"

[features]
default = []
