[package]
name = "sum_sq"
version = "0.1.0"
authors = ["Sreenath Krishnan <sreenathk.89@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

docopt = "1.0"
serde = { version = "1.0", features = ["derive"] }
martian = {git = "https://github.com/martian-lang/martian-rust.git"}
martian-derive = {git = "https://github.com/martian-lang/martian-rust.git"}
anyhow = "1"
